# music-year-prediction

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  infer.py  pyproject.toml  train.py  utils.py
.dvc/: config
configs/: config.yaml
data/: .gitignore  YearPredictionMSD.txt.dvc  test_sample.txt.dvc
models/: .gitignore  model.safetensors.dvc  preprocessing.json.dvc
music_year_prediction/: __init__.py  dataset.py  logger.py  model.py  trainer.py  utils.py
